Attacker container fix and README update

--- a/Attacker/client/j60870/build.gradle
+++ b/Attacker/client/j60870/build.gradle
@@ -17,6 +17,10 @@ plugins {
 apply plugin: "org.asciidoctor.convert"
 apply from: "configuration.gradle"
 
+asciidoctorj {
+  groovyDslVersion = '2.0.2'
+}
+
 asciidoctor {
   backends = ["pdf", "html5"]
   attributes    "stylesheet": "openmuc-asciidoc.css",
